@@ -2,6 +2,7 @@
 
 #include "DebuggerData.h"
 #include <QStringList>
+#include <QXmlStreamWriter>
 
 
 //
@@ -30,6 +31,11 @@ Breakpoints::Breakpoints()
 {
 }
 
+void Breakpoints::clear()
+{
+	breakpoints.clear();
+}
+
 void Breakpoints::setMemoryLayout(MemoryLayout* ml)
 {
 	memLayout = ml;
@@ -42,6 +48,7 @@ void Breakpoints::setBreakpoints(const QString& str)
 	breakpoints.clear();
 	for (QStringList::Iterator it = bps.begin(); it != bps.end(); ++it) {
 		Breakpoint newBp;
+		newBp.type = BREAKPOINT;
 		int p = it->indexOf(' ');
 		newBp.id = it->left(p).trimmed();
 		if(newBp.id.isEmpty()) break;
@@ -52,9 +59,46 @@ void Breakpoints::setBreakpoints(const QString& str)
 			newBp.address = it->mid(p, q-p).trimmed().toUShort(0,0);
 			newBp.condition = it->mid(q).trimmed();
 		}
+		newBp.regionEnd = newBp.address;
 		parseCondition(newBp);
 		insertBreakpoint(newBp);
 	}
+}
+
+QString Breakpoints::mergeBreakpoints(const QString& str)
+{
+	// copy breakpoints
+	BreakpointList oldBps( breakpoints );
+	// parse new list
+	setBreakpoints( str );
+	// check old list against new one
+	QStringList mergeSet;
+	while( oldBps.size() ) {
+		Breakpoint& old = oldBps.first();
+		BreakpointList::iterator newit = breakpoints.begin();
+		while( newit != breakpoints.end() ) {
+			// check for identical location
+			if( old.type == newit->type &&
+			    old.address == newit->address &&
+			    old.regionEnd == newit->regionEnd &&
+			    old.ps == newit->ps &&
+			    old.ss == newit->ss &&
+			    old.segment == newit->segment )
+			{
+				break;
+			}
+			newit++;
+		}
+		if( newit == breakpoints.end() ) {
+			// create command to set this breakpoint again
+			QString cmd;
+			cmd.sprintf("debug set_bp %i { [ pc_in_slot %c %c %i ] }",
+			            old.address, old.ps, old.ss, old.segment );
+			mergeSet << cmd;
+		}
+		oldBps.removeFirst();
+	}
+	return mergeSet.join(" ; ");
 }
 
 static QString getNextArgument(QString& data, int& pos)
@@ -182,4 +226,99 @@ int Breakpoints::findNextBreakpoint()
 	// stub
 	// will implement findfirst/findnext scheme for speed
 	return -1;
+}
+
+
+void Breakpoints::saveBreakpoints( QXmlStreamWriter& xml )
+{
+	// write symbols
+	BreakpointList::iterator it = breakpoints.begin();
+	while( it != breakpoints.end() ) {
+		xml.writeStartElement("Breakpoint");
+		// type
+		switch( it->type ) {
+			case BREAKPOINT:
+				xml.writeAttribute("type", "breakpoint");
+				break;
+			case WATCHPOINT_IOREAD:
+				xml.writeAttribute("type", "ioread");
+				break;
+			case WATCHPOINT_IOWRITE:
+				xml.writeAttribute("type", "iowrite");
+				break;
+			case WATCHPOINT_MEMREAD:
+				xml.writeAttribute("type", "memread");
+				break;
+			case WATCHPOINT_MEMWRITE:
+				xml.writeAttribute("type", "memwrite");
+				break;
+		}
+		// id
+		xml.writeAttribute("id", it->id);
+		// slot/segment
+		xml.writeAttribute("primarySlot", QString(it->ps) );
+		xml.writeAttribute("secondarySlot", QString(it->ss) );
+		xml.writeAttribute("segment", QString::number(it->segment) );
+		// address
+		if( it->type == BREAKPOINT ) {
+			xml.writeTextElement("address", QString::number(it->address) );
+		} else {
+			xml.writeTextElement("regionStart", QString::number(it->address) );
+			xml.writeTextElement("regionEnd", QString::number(it->regionEnd) );
+		}
+		// condition not supported yet
+		// complete
+		xml.writeEndElement();
+		it++;
+	}
+}
+
+void Breakpoints::loadBreakpoints( QXmlStreamReader& xml )
+{
+	Breakpoint bp;
+	while( !xml.atEnd() ) {
+		xml.readNext();
+		// exit if closing of main tag
+		if( xml.isEndElement() )
+			if( xml.name() == "Breakpoints" )
+				break;
+			else if( xml.name() == "Breakpoint" )
+				insertBreakpoint(bp);
+		// begin tag
+		if( xml.isStartElement() ) {
+			if( xml.name() == "Breakpoint" ) {
+
+				// set type
+				QString type = xml.attributes().value("type").toString().toLower();
+				if( type == "ioread" )
+					bp.type = WATCHPOINT_IOREAD;
+				else if( type == "iowrite" )
+					bp.type = WATCHPOINT_IOWRITE;
+				else if( type == "memread" )
+					bp.type = WATCHPOINT_MEMREAD;
+				else if( type == "memwrite" )
+					bp.type = WATCHPOINT_MEMWRITE;
+				else
+					bp.type = BREAKPOINT;
+				// id
+				bp.id = xml.attributes().value("id").toString();
+				// slot/segment
+				bp.ps = xml.attributes().value("primarySlot").at(0).toAscii();
+				bp.ss = xml.attributes().value("secondarySlot").at(0).toAscii();
+				bp.segment = xml.attributes().value("segment").toString().toInt();
+				
+			} else if( xml.name() == "address" || xml.name() == "regionStart" ) {
+				
+				// read symbol name
+				bp.address = xml.readElementText().toInt();
+				if( bp.type == BREAKPOINT ) bp.regionEnd = bp.address;
+				
+			} else if( xml.name() == "regionEnd" ) {
+				
+				// read symbol name
+				bp.regionEnd = xml.readElementText().toInt();
+				
+			}
+		}
+	}
 }
