@@ -1,5 +1,9 @@
 $Id$
 
+2008-04-18 Edwin Velds <e.velds@gmail.com>
+	* Added saving op breakpoints.
+	* Added restoring session breakpoints after connect.
+
 2008-04-17 Edwin Velds <e.velds@gmail.com>
 	* Added preliminary support for saving debug sessions.
 	  Only symbols currently supported. Note that file format may change
